einstellung_derive/src/trybuild_tests/duplicate_merge_attribute.stderr
error: Duplicate field `merge`
 --> src/trybuild_tests/duplicate_merge_attribute.rs
  |
  |     #[config(merge = "extend", merge = "replace")]
  |                                ^^^^^
